# i-cant-read-app

./: .gitignore  config.py  main.py  pyproject.toml  requirements.txt
management/: dispatcher.py  healthcheck.py  i_cant_read.py
services/listeners/: __init__.py  listener.py  obs_plugin_listener.py  websocket_client_listener.py
services/player/: mpv_player.py  player.py
services/rvc/: __init__.py  rvc.py  rvc_applio.py  rvc_gradio.py
services/text_websocket/: __init__.py  text_websocket_server.py
tasks/: __init__.py  celery_app.py  cleanup_task.py  initial_task.py  ocr_dedup_task.py  playback_task.py  textfilter_task.py  websocket_text_task.py
tasks/ocr_tasks/: __init__.py  ollama_ocr_frame_task.py  ollama_plain_ocr_frame_task.py  owocr_ocr_frame_task.py
tasks/rvc_tasks/: __init__.py  applio_rvc_task.py  rvc_gradio_task.py
tasks/tts_tasks/: __init__.py  applio_tts_task.py  dummy_tts_task.py  kokoro_fastapi_task.py  qwen3_tts_task.py
tasks/utils/: __init__.py  history.py  ocr_dedup.py  textfilter.py
